--- a/calender.html
+++ b/calender.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calendar Table</title>
-    <link rel="stylesheet" href="css/calStyle.css">
+    <link rel="stylesheet" href="https://github.com/narayana9999/css-easy-calender/blob/main/calStyle.css">
 </head>
 
 <body>
